--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-storage-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-messaging-compat.js"></script>
 
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#38bdf8">
+  
 <style>
   html,body,#app { height: 100%; }
   .sidebar { min-width: 80px; max-width: 320px; }
